Fixed Overlap in BO and to Display Code in Select

--- a/integral-web2/app/styles/main.scss
+++ b/integral-web2/app/styles/main.scss
@@ -131,7 +131,7 @@ body {
 .grid-style-excel-lg {
 
 	@extend .gridStyle;
-    width: 700px;
+    width: 600px;
     height: 450px;
 }
 
